@@ -12,6 +12,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.BiPredicate;
+import java.util.stream.Collectors;
 
 public abstract class DocumentDateHelper<T extends CaseDocumentTabData> {
 
@@ -35,7 +36,7 @@ public abstract class DocumentDateHelper<T extends CaseDocumentTabData> {
 
         List<T> modifiedDocuments = allDocuments.stream()
             .peek(document -> addDateToNewDocuments(documentsBeforeEvent, document))
-            .toList();
+            .collect(Collectors.toList());
 
         caseData.put(documentCollection, modifiedDocuments);
         return caseData;
